--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -45,6 +45,18 @@ jobs:
       ################################
       # Run Linters against code base #
       ################################
+      - name: Lint Code Base
+        #
+        # Use full version number to avoid cases when a next
+        # released version is buggy
+        # About slim image: https://github.com/github/super-linter#slim-image
+        uses: github/super-linter/slim@v4.10.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BRANCH: main
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_GITHUB_ACTIONS: true
+
       - name: Setup Node v16 for Yarn v3
         uses: actions/setup-node@v3
         with:
